# web

./: .env  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
api/: .gitignore  Cargo.toml  log.txt
api/src/: auth.rs  gent.rs  main.rs  spotify.rs
public/posts/: test.markdown
src/: App.vue  main.ts
src/assets/: main.css
src/assets/posts/: test.markdown
src/blogs/: hkcert.vue
src/components/: blog.vue  file.vue
src/router/: index.ts
src/views/: 404View.vue  BlogView.vue  HomeView.vue  ProjectsView.vue
web/: package-lock.json  package.json  test.py
web/public/posts/: test.markdown
web/src/: App.vue
web/src/assets/: base.css  main.css
web/src/blogs/: hkcert.vue
web/src/components/: Bookshelf.vue  blog.vue  file.vue
web/src/views/: 404View.vue  BlogView.vue  GalleryView.vue  HomeView.vue  ProjectsView.vue
