[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
base64 = "0.22.1"
chrono = "0.4.41"
dotenv = "0.15.0"
querystring = "1.1.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.28.0"
reqwest = "0.12.15"
rusqlite = "0.35.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
spotify-rs = "0.4.1"
tokio-cron-scheduler = "0.13.0"
